# tortuga-os

./: .dependency-cruiser.cjs  .editorconfig  .gitignore  .gitleaks.toml  .lintstagedrc.json  .npmrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  commitlint.config.cjs  package.json  pnpm-lock.yaml  tortuga.config.json  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
.husky/: commit-msg  pre-commit
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons-v1/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/sidecar/: .env.example  build.mjs  package.json  test-mcp-handshake.mjs  tsconfig.json
apps/web/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
docs/: DEV_TUNNEL.md  DOMAIN.md  EVIDENCE-SCHEMA.md  MCP-SUPABASE-SETUP.md  PACKAGE-STRUCTURE.md  PHASES-WORKFLOW.md  RELEASE.md  REWORK-MODEL.md  ROLES.md  SECURITY_AUDIT_FINDINGS.md  SECURITY_CHECKLIST.md  STANDARDS.md  STANDARDS_AUDIT.md  STORY-FORMAT.md  THREAT_MODEL.md
scripts/: authenticode-sign.ps1  build-manifest.mjs  generate-icon-source.mjs  generate-windows-store-icons.mjs  tauri-build.cmd  tauri-dev.cmd  verify-task.ts
tests/: setup.ts  vitest.config.ts
tests/e2e/: admin.e2e.ts  agent-model-overrides.e2e.ts  (+29 more)
(+118 files in other folders)
