[package]
name = "tortuga-os"
version = "0.1.0"
description = "Tortuga OS — desktop agentic ERP where AI agents do the work"
authors = ["Tortuga OS"]
edition = "2021"

[lib]
name = "tortuga_os_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
